[gd_scene load_steps=49 format=3 uid="uid://pgjrvm77s61h"]

[ext_resource type="Script" uid="uid://cx7iuewml0kgu" path="res://code/controls_pop_up.gd" id="1_t1pyo"]
[ext_resource type="AudioStream" uid="uid://d3ejisirg3ryk" path="res://music/Soundtrack/pravetz - flow of time.ogg" id="2_jqynv"]
[ext_resource type="FontFile" uid="uid://dje7nt7quhun8" path="res://fonts/PressStart2P-Regular.ttf" id="3_ebyh3"]
[ext_resource type="Texture2D" uid="uid://3d85dudj2ygh" path="res://images/pixil-frame-0.png" id="4_43vfp"]
[ext_resource type="Texture2D" uid="uid://dxbb7jp3gokp4" path="res://images/cutscene0_spritesheet.png" id="5_cfxob"]
[ext_resource type="Texture2D" uid="uid://chgrbcdpi0ji7" path="res://images/cutscene1_spritesheet.png" id="6_5m3fg"]
[ext_resource type="Texture2D" uid="uid://c3oh2ex85c44h" path="res://images/cutscene2_spritesheet.png" id="7_fal7k"]
[ext_resource type="Texture2D" uid="uid://dwf5nwev5l87g" path="res://images/cutscene3_spritesheet.png" id="8_yn1gb"]
[ext_resource type="Texture2D" uid="uid://dgbe5wnioxhq1" path="res://images/cutscene4_spritesheet.png" id="9_sdski"]

[sub_resource type="Animation" id="Animation_lb0oj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fader/screen:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_o46m6"]
resource_name = "fade in"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fader/screen:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_lg1og"]
resource_name = "fade out"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fader/screen:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gsp1v"]
_data = {
&"RESET": SubResource("Animation_lb0oj"),
&"fade in": SubResource("Animation_o46m6"),
&"fade out": SubResource("Animation_lg1og")
}

[sub_resource type="Animation" id="Animation_lnix6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_8iko0"]
resource_name = "text show"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3rriu"]
_data = {
&"RESET": SubResource("Animation_lnix6"),
&"text show": SubResource("Animation_8iko0")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_p8k2b"]
atlas = ExtResource("5_cfxob")
region = Rect2(0, 0, 65, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pm61d"]
atlas = ExtResource("5_cfxob")
region = Rect2(65, 0, 65, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_eiurp"]
atlas = ExtResource("5_cfxob")
region = Rect2(130, 0, 65, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_atdqh"]
atlas = ExtResource("5_cfxob")
region = Rect2(195, 0, 65, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_jcsiq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8k2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pm61d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eiurp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_atdqh")
}],
"loop": true,
"name": &"play_cutscene0",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_cufrl"]
atlas = ExtResource("6_5m3fg")
region = Rect2(0, 0, 128, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_udman"]
atlas = ExtResource("6_5m3fg")
region = Rect2(128, 0, 128, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrcsy"]
atlas = ExtResource("6_5m3fg")
region = Rect2(256, 0, 128, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_bx5jg"]
atlas = ExtResource("6_5m3fg")
region = Rect2(384, 0, 128, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_avc05"]
atlas = ExtResource("6_5m3fg")
region = Rect2(512, 0, 128, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_8r7lx"]
atlas = ExtResource("6_5m3fg")
region = Rect2(640, 0, 128, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_453gg"]
atlas = ExtResource("6_5m3fg")
region = Rect2(768, 0, 128, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_rroqo"]
atlas = ExtResource("6_5m3fg")
region = Rect2(896, 0, 128, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7rgq"]
atlas = ExtResource("6_5m3fg")
region = Rect2(1024, 0, 128, 65)

[sub_resource type="SpriteFrames" id="SpriteFrames_lo4hw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cufrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udman")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrcsy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bx5jg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avc05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8r7lx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_453gg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rroqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7rgq")
}],
"loop": true,
"name": &"play_cutscene1",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_5e8gv"]
atlas = ExtResource("7_fal7k")
region = Rect2(0, 0, 65, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdxw8"]
atlas = ExtResource("7_fal7k")
region = Rect2(65, 0, 65, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_quufn"]
atlas = ExtResource("7_fal7k")
region = Rect2(130, 0, 65, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vbf0"]
atlas = ExtResource("7_fal7k")
region = Rect2(195, 0, 65, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7drjr"]
atlas = ExtResource("7_fal7k")
region = Rect2(260, 0, 65, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_bbbyv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5e8gv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdxw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_quufn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vbf0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7drjr")
}],
"loop": true,
"name": &"play_cutscene2",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_h0851"]
atlas = ExtResource("8_yn1gb")
region = Rect2(0, 0, 128, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_de1ft"]
atlas = ExtResource("8_yn1gb")
region = Rect2(128, 0, 128, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahhj3"]
atlas = ExtResource("8_yn1gb")
region = Rect2(256, 0, 128, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_4loji"]
atlas = ExtResource("8_yn1gb")
region = Rect2(384, 0, 128, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_mi6nb"]
atlas = ExtResource("8_yn1gb")
region = Rect2(512, 0, 128, 65)

[sub_resource type="SpriteFrames" id="SpriteFrames_2qioy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0851")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_de1ft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahhj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4loji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mi6nb")
}],
"loop": true,
"name": &"play_cutscene3",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_5yawe"]
atlas = ExtResource("9_sdski")
region = Rect2(0, 0, 128, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_05iao"]
atlas = ExtResource("9_sdski")
region = Rect2(128, 0, 128, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7ee2"]
atlas = ExtResource("9_sdski")
region = Rect2(256, 0, 128, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_i20eb"]
atlas = ExtResource("9_sdski")
region = Rect2(384, 0, 128, 55)

[sub_resource type="SpriteFrames" id="SpriteFrames_o2n7g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yawe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05iao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7ee2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i20eb")
}],
"loop": true,
"name": &"play_cutscene4",
"speed": 5.0
}]

[node name="ControlsPopUp" type="Control"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t1pyo")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="bg_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_jqynv")
autoplay = true

[node name="sterowanko" type="Panel" parent="."]
visible = false
self_modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -273.0
offset_top = -312.0
offset_right = 273.0
offset_bottom = 312.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8

[node name="poruszanie_sie" type="Label" parent="sterowanko"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = 21.0
offset_right = 91.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_ebyh3")
theme_override_font_sizes/font_size = 20
text = "MOVING"
horizontal_alignment = 1

[node name="strzelanie" type="Label" parent="sterowanko"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 203.0
offset_right = 80.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_ebyh3")
theme_override_font_sizes/font_size = 20
text = "SHOOTING"
horizontal_alignment = 1

[node name="double_jump" type="Label" parent="sterowanko"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -44.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("3_ebyh3")
theme_override_font_sizes/font_size = 30
text = "USE DOUBLE JUMP!"
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="sterowanko"]
position = Vector2(273, 280)
scale = Vector2(4.55241, 4.53442)
texture = ExtResource("4_43vfp")

[node name="controls" type="Label" parent="sterowanko"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.0517799
anchor_right = 0.5
anchor_bottom = 0.0517799
offset_left = -101.0
offset_right = 101.0
offset_bottom = 31.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_ebyh3")
theme_override_font_sizes/font_size = 50
text = "CONTROLS"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="fader" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_gsp1v")
}

[node name="screen" type="ColorRect" parent="fader"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="start_text_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="cutscene0_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="cutscene1_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="cutscene2_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="cutscene3_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="cutscene4_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="subtimer1" type="Timer" parent="."]
wait_time = 9.2
one_shot = true

[node name="no_image_text" type="Label" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 416.0
offset_right = 1728.0
offset_bottom = 608.0
theme_override_fonts/font = ExtResource("3_ebyh3")
theme_override_font_sizes/font_size = 25
text = "It all started after French revolution 

filled soil with blood.


Cataclysm known as Punishment day 

rapidly expanded all over the Europe"
horizontal_alignment = 1
visible_characters = 0
visible_ratio = 0.0

[node name="Writer" type="AnimationPlayer" parent="no_image_text"]
libraries = {
&"": SubResource("AnimationLibrary_3rriu")
}
speed_scale = 0.5

[node name="cutscene0" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(424, 514.462)
scale = Vector2(7.08077, 7.08077)
sprite_frames = SubResource("SpriteFrames_jcsiq")
animation = &"play_cutscene0"

[node name="text0" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 704.0
offset_top = 272.0
offset_right = 1664.0
offset_bottom = 832.0
theme_override_fonts/font = ExtResource("3_ebyh3")
theme_override_font_sizes/font_size = 21
text = "Complete mayhem caused by outbreak of the unholy

decimated the continent's population.


Many thought it was the Apocalypse, but humans made

a choice to withstand God's challenge."
visible_characters = 0
visible_ratio = 0.0

[node name="Writer" type="AnimationPlayer" parent="text0"]
libraries = {
&"": SubResource("AnimationLibrary_3rriu")
}
speed_scale = 0.5

[node name="cutscene1" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(959.179, 361.875)
scale = Vector2(8.99102, 9.05)
sprite_frames = SubResource("SpriteFrames_lo4hw")
animation = &"play_cutscene1"

[node name="text1" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 384.0
offset_top = 744.0
offset_right = 1536.0
offset_bottom = 856.0
theme_override_fonts/font = ExtResource("3_ebyh3")
theme_override_font_sizes/font_size = 21
text = "70 years later, I am ordered to explore

the abandoned monastery.


New inquisition seeks to reclaim its 

control over the south."
visible_characters = 0
visible_ratio = 0.0

[node name="Writer" type="AnimationPlayer" parent="text1"]
libraries = {
&"": SubResource("AnimationLibrary_3rriu")
}
speed_scale = 0.5

[node name="cutscene2" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(1505.88, 515.2)
scale = Vector2(7.08077, 7.08077)
sprite_frames = SubResource("SpriteFrames_bbbyv")
animation = &"play_cutscene2"

[node name="text2" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 128.0
offset_top = 272.0
offset_right = 1152.0
offset_bottom = 384.0
theme_override_fonts/font = ExtResource("3_ebyh3")
theme_override_font_sizes/font_size = 21
text = "Omnipresent desperation to not vanish, triggered

a rapid technologial progress. 


Humans learned to build unyielding bastions 

out of places like this one"
visible_characters = 0
visible_ratio = 0.0

[node name="Writer" type="AnimationPlayer" parent="text2"]
libraries = {
&"": SubResource("AnimationLibrary_3rriu")
}
speed_scale = 0.5

[node name="cutscene3" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(960, 361.875)
scale = Vector2(8.99231, 9.05)
sprite_frames = SubResource("SpriteFrames_2qioy")
animation = &"play_cutscene3"

[node name="text3" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -577.5
offset_top = 204.0
offset_right = 577.5
offset_bottom = 316.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_ebyh3")
theme_override_font_sizes/font_size = 21
text = "Other executors spread rumors about colossal structures

often hidden deep beneath the old monasteries"
horizontal_alignment = 1
visible_characters = 0
visible_ratio = 0.0

[node name="Writer" type="AnimationPlayer" parent="text3"]
libraries = {
&"": SubResource("AnimationLibrary_3rriu")
}
speed_scale = 0.5

[node name="cutscene4" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(960, 318.25)
scale = Vector2(9.08182, 9.08182)
sprite_frames = SubResource("SpriteFrames_o2n7g")
animation = &"play_cutscene4"

[node name="text4" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 448.0
offset_top = 696.0
offset_right = 1472.0
offset_bottom = 808.0
theme_override_fonts/font = ExtResource("3_ebyh3")
theme_override_font_sizes/font_size = 21
text = "I wonder what this one hides from me"
horizontal_alignment = 1
visible_characters = 0
visible_ratio = 0.0

[node name="Writer" type="AnimationPlayer" parent="text4"]
libraries = {
&"": SubResource("AnimationLibrary_3rriu")
}
speed_scale = 0.5

[connection signal="timeout" from="start_text_timer" to="." method="_on_start_text_timer_timeout"]
[connection signal="timeout" from="cutscene0_timer" to="." method="_on_cutscene_0_timer_timeout"]
[connection signal="timeout" from="cutscene1_timer" to="." method="_on_end_timer_timeout"]
[connection signal="timeout" from="cutscene2_timer" to="." method="_on_cutscene_2_timer_timeout"]
[connection signal="timeout" from="cutscene3_timer" to="." method="_on_cutscene_3_timer_timeout"]
[connection signal="timeout" from="cutscene4_timer" to="." method="_on_cutscene_4_timer_timeout"]
[connection signal="timeout" from="subtimer1" to="." method="_on_subtimer_1_timeout"]
